// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not include ExtensionComponentWrap for prod builds 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
<_Extension>should not be wrapped</_Extension>;"
`;

exports[`Does not transform when no extensions are registered 1`] = `"<Abc />;"`;

exports[`Removes associated import decl when there is only one specifier, and it is replaced 1`] = `
"import _Extension from '/My/extensions/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';

<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"Foo\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`Removes default import specifier when there are also named, and binding for default not used after replace 1`] = `
"import _Extension from '/My/extensions/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
import { Bar } from 'bar';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"Foo\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`Removes named import specifier when there is a default and >1 named, and binding for name not used after replace 1`] = `
"import _Extension from '/My/extensions/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
import Foo, { Bizz } from 'bar';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"Bar\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`Removes named import specifier when there is a default, and binding for name not used after replace 1`] = `
"import _Extension from '/My/extensions/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
import Foo from 'bar';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"Bar\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`Removes targetProp prop even if that element was not targeted 1`] = `"<Abc />;"`;

exports[`replace copies over props by default 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
import _ExtensionComponentWrap from \\"@magento/anhinga/dist/ExtensionComponentWrap\\";
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension customPropShouldStay=\\"test\\"></_Extension></_ExtensionComponentWrap>;"
`;

exports[`replace does not copy over props when "withoutProps" is true 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
import _ExtensionComponentWrap from \\"@magento/anhinga/dist/ExtensionComponentWrap\\";
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`replace transfers children when "withoutChildren" not specified 1`] = `
"import _Extension from '/My/extension/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension>
    <div>I should be transferred</div>
    </_Extension></_ExtensionComponentWrap>;"
`;

exports[`replace using "withoutChildren" does not copy children 1`] = `
"import _Extension from '/My/extensions/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`replacement injects new import declaration, and replaces target 1`] = `
"import _Extension from '/My/extension/path.js';
import _ExtensionComponentWrap from '@magento/anhinga/dist/ExtensionComponentWrap';
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension></_Extension></_ExtensionComponentWrap>;"
`;

exports[`replacement works w/ custom targetProp 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
import _ExtensionComponentWrap from \\"@magento/anhinga/dist/ExtensionComponentWrap\\";
<_ExtensionComponentWrap replacedID=\\"foo.bar\\" replacedInFile=\\"unknown\\" replacedElementType=\\"div\\"><_Extension>Test</_Extension></_ExtensionComponentWrap>;"
`;
